# payulator

./: .gitignore  pyproject.toml
payulator/: __init__.py  constants.py  helpers.py  loan.py
tests/: context.py  test_helpers.py  test_loan.py  test_payulator.py
tests/data/: bad_laon_params.json  good_loan_params.json
